lawsuit judgemodal fix remove white space

--- a/src/app/pages/lawsuit/manage/dialog-judgment.scss
+++ b/src/app/pages/lawsuit/manage/dialog-judgment.scss
@@ -1,4 +1,5 @@
-.modal-body{
-    max-height: calc(100vh - 200px);
-    overflow-y: auto;
+
+.mat-dialog-container {
+    padding: 0px !important;
+
 }
